--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,9 +2,9 @@ spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
 spring.datasource.tomcat.max-age=1000
 spring.datasource,driver-class=com.mysql.jdbc.Driver
-spring.datasource.url = jdbc:mysql://localhost/war?useSSL=false
-spring.datasource.username=root
-spring.datasource.password=
+spring.datasource.url = jdbc:mysql://localhost/game?useSSL=false
+spring.datasource.username=aditya	
+spring.datasource.password=aditya
 spring.datasource.tomcat.max-idle=2
 spring.datasource.tomcat.min-idle=2
 spring.datasource.tomcat.max-active=2
