--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,7 +2,7 @@ spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
 spring.datasource.tomcat.max-age=1000
 spring.datasource,driver-class=com.mysql.jdbc.Driver
-spring.datasource.url = jdbc:mysql://localhost/game?useSSL=false
+spring.datasource.url = jdbc:mysql://35.193.113.168/game?useSSL=false
 spring.datasource.username=aditya	
 spring.datasource.password=aditya
 spring.datasource.tomcat.max-idle=2
